--- a/webstore/pom.xml
+++ b/webstore/pom.xml
@@ -95,6 +95,15 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jms</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-spring</artifactId>
+			<version>5.13.3</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
