tried to implement a email sending service using aop

--- a/webstore/src/main/resources/application.properties
+++ b/webstore/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.mail.password=P@ssW0rd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+
+#C:\Program Files\Java\jdk1.8.0_151\jre\bin\keytool.exe -import -alias joe -file "C:\Users\Mafrel\Desktop\gmail.cer" -keystore "C:\Program Files\Java\jdk1.8.0_151\jre\lib\security\cacerts" -storepass changeit
